2016-05-21  Daniel Hawkins
	* common/los.c: Refactored set_wall() to recycle a couple variables to
	  reduce recursion overhead.
	* plugins/cfanim/cfanim.c: Refactored get_boolean() to not use strncmp(),
	  since it was only checking the first character anyway.
	* common/player.c: Changed a malloc() with a memset() to 0 into a calloc().
	* lib/attackmess: Change 'acrobaticly' to 'acrobatically'.

2016-05-18  Daniel Hawkins
	* common/map.c: Add new maps to the front of the mapstruct linked list
	  since there does not appear to be any order preference in the rest of
	  the codebase.
	  Remove a redundant memset to 0 after a calloc(). Also check for null
	  to prevent potential segfaults.
	  Optimize out newx and newy in get_map_flags(). x and y are already copies.
	  Optimize out check_dir in compute_monster_path().
	  Optimize the initialization of distance to use memset() instead of a loop.

2016-05-17  Daniel Hawkins
	* common/living.c: Change the depletion message for Con loss to differentiate
	  it from the permanent stat loss message.
	* server/monster.c: Additional optimizations in monster_compute_path().

2016-05-16  Daniel Hawkins
	* server/knowledge.c: Use malloc instead of calloc where all struct values
	  are subsequently set.

2016-05-15  Daniel Hawkins
	* server/monster.c: Remove redundant hp value check in monster_do_living().
	  Adjusted the run_away health check to use integers instead of floats.
	  This causes a 1-higher threshold for some maxhp values if run_away is
	  13, 21, 26, 39, 42, 52, 53, 59, 65, 71, 78, or 84.
	* server/attack.c: Made same adjustment to run_away calc as in monster.c.
	  In this manner, the rounding change occurs on both set and unset of FLAG_RUN_AWAY.
	* server/arch.c: Refactor some comparisons in is_type_valid() to use a switch statement.

2016-05-14  Daniel Hawkins
	* server/monster.c: Optimizations in monster_compute_path().
	* common/object.c: Reimplement the absdir() function to avoid loops.
